--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,9 @@
 }
 
 header {
-  border: 1px solid green;
-  width: 390px;
-  height: 60px;
+  border: 5px solid green;
   padding: 16px 32px;
+  background-color: black;
 }
 
 h1 {
