--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 
 header {
   border: 5px solid green;
+  border-radius: 16px;
   padding: 16px 32px;
   background-color: black;
 }
@@ -14,4 +15,10 @@ h1 {
   text-align: center;
   width: 300px;
   margin: 0;
+}
+
+main {
+  background-color: aqua;
+  width: 150px;
+  height: 150px;
 }
