--- a/styles.css
+++ b/styles.css
@@ -14,5 +14,32 @@ h1 {
   color: rgb(36, 90, 30);
   text-align: center;
   width: 300px;
-  margin: 0;
+}
+
+.card {
+  background-color: lightgrey;
+  border: 2px solid grey;
+  border-radius: 8px;
+  padding: 16px 32px;
+  margin: 10px;
+  width: 360px;
+}
+
+.showanswer {
+  display: block;
+  text-align: center;
+  font-size: 30px;
+  color: white;
+  background-color: rgb(164, 107, 164);
+  border: 2px solid rgb(136, 85, 142);
+  border-radius: 4px;
+}
+
+.one {
+  text-align: center;
+  font-size: 12px;
+  color: rgb(41, 40, 40);
+  background-color: white;
+  border: 2px solid grey;
+  border-radius: 6px;
 }
