--- a/styles.css
+++ b/styles.css
@@ -28,24 +28,27 @@ h1 {
   padding: 16px 32px;
   margin: 10px;
   width: 360px;
+  height: 360px;
 }
 
 .showanswer {
   display: block;
-  text-align: center;
   font-size: 30px;
   color: white;
   background-color: rgb(164, 107, 164);
   border: 2px solid rgb(136, 85, 142);
   border-radius: 4px;
+  margin: 2em auto;
 }
 
 .one {
   text-align: center;
   width: auto;
-  font-size: 12px;
+  height: auto;
+  font-size: 20px;
   color: rgb(41, 40, 40);
   background-color: white;
   border: 2px solid grey;
   border-radius: 6px;
+  margin: auto;
 }
