--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,64 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 80px 0 45px 0;
   font-family: system-ui;
 }
 
-header {
-  border: 5px solid green;
-  border-radius: 16px;
-  padding: 16px 32px;
-  background-color: black;
+.header {
+  background: #000000;
+  color: #ffffff;
+  height: 80px;
+  box-shadow: rgba(210, 167, 167, 0.24) 0 3px 8px;
+  padding: 10px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 1;
 }
 
-h1 {
-  background-color: black;
-  color: rgb(36, 90, 30);
-  text-align: center;
-  width: 300px;
+.header__heading {
+  color: #4eb64c;
 }
 
 .card {
-  background-color: lightgrey;
-  border: 2px solid grey;
-  border-radius: 8px;
-  padding: 16px 32px;
-  margin: 10px;
-  width: 360px;
-  height: 360px;
+  margin: 20px 10%;
+  border: 5px solid #252629;
+  padding: 3% 10%;
+  scroll-margin-top: 100px;
+  border-radius: 2rem;
+  position: relative;
+}
+
+.card__heading {
+  margin: 0 0 10px 0;
+}
+
+.material-symbols-outlined {
+  font-size: 2em;
+  padding: 6px 12px;
+
+  position: absolute;
+  top: -1px;
+  right: -1px;
 }
 
 .showanswer {
   display: block;
   font-size: 30px;
+  width: 240px;
+  height: 70px;
   color: white;
   background-color: rgb(164, 107, 164);
   border: 2px solid rgb(136, 85, 142);
   border-radius: 4px;
-  margin: 2em auto;
+  margin: 1.5em auto;
 }
 
 .one {
