--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
   color: #ffffff;
   height: 80px;
   box-shadow: rgba(210, 167, 167, 0.24) 0 3px 8px;
-  padding: 10px;
+  padding: 2px;
   position: fixed;
   top: 0px;
   width: 100%;
@@ -24,7 +24,10 @@ body {
 }
 
 .header__heading {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #4eb64c;
+  text-align: center;
 }
 
 .card {
