--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,20 @@ body {
   background-color: rgb(241, 101, 197);
   color: #4eb64c;
 }
+
+.navbar-links ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.navbar-links li {
+  list-style: none;
+}
+
+.navbar-links li a {
+  text-decoration: none;
+  color: #4eb64c;
+  padding: 1rem;
+  display: block;
+}
