--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,8 @@ body {
   width: 240px;
   height: 70px;
   color: white;
-  background-color: rgb(164, 107, 164);
-  border: 2px solid rgb(136, 85, 142);
+  background-color: rgb(225, 69, 100);
+  border: 2px solid crimson;
   border-radius: 4px;
   margin: 1.5em auto;
 }
@@ -71,8 +71,8 @@ body {
   width: auto;
   height: auto;
   font-size: 20px;
-  color: rgb(41, 40, 40);
-  background-color: white;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
   border: 2px solid grey;
   border-radius: 6px;
   margin: auto;
@@ -82,7 +82,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(241, 101, 197);
+  background-color: rgb(255, 248, 248);
   color: #4eb64c;
 }
 
@@ -101,4 +101,11 @@ body {
   color: #4eb64c;
   padding: 1rem;
   display: block;
+}
+
+..navbar-links li :hover {
+  background-color: crimson;
+}
+
+.material-symbols-outlined2 {
 }
