--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,11 @@ body {
   margin: 0 0 10px 0;
 }
 
-.material-symbols-outlined {
+.bookmarkwrapper {
   font-size: 2em;
   padding: 6px 12px;
   position: absolute;
-  top: -15px;
+  top: -25px;
   right: -1px;
 }
 
@@ -82,7 +82,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(255, 248, 248);
+  background-color: rgb(0, 0, 0);
   color: #4eb64c;
 }
 
@@ -103,9 +103,6 @@ body {
   display: block;
 }
 
-..navbar-links li :hover {
+.navbar-links li :hover {
   background-color: crimson;
-}
-
-.material-symbols-outlined2 {
 }
