--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,8 @@ body {
 
 .navbar {
   display: flex;
+  position: fixed;
+  bottom: 0;
   justify-content: space-around;
   align-items: center;
   background-color: rgb(0, 0, 0);
@@ -99,7 +101,8 @@ body {
 .navbar-links li a {
   text-decoration: none;
   color: #4eb64c;
-  padding: 1rem;
+  padding: 1.1rem;
+  margin: 1rem;
   display: block;
 }
 
