--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,12 @@ body {
   display: block;
   position: relative;
   font-size: 30px;
-  width: 240px;
-  height: 70px;
+  width: 230px;
+  height: 60px;
   color: white;
-  background-color: rgb(225, 69, 100);
-  border: 2px solid crimson;
-  border-radius: 4px;
+  background-color: rgb(0, 0, 0);
+  border: 2px solid #4eb64c;
+  border-radius: 8px;
   margin: 1.5em auto;
 }
 
@@ -82,6 +82,7 @@ body {
   display: flex;
   position: fixed;
   bottom: 0;
+  width: 100%;
   justify-content: space-around;
   align-items: center;
   background-color: rgb(0, 0, 0);
@@ -102,10 +103,15 @@ body {
   text-decoration: none;
   color: #4eb64c;
   padding: 1.1rem;
-  margin: 1rem;
+  width: 100%;
   display: block;
 }
 
 .navbar-links li :hover {
   background-color: crimson;
+}
+
+.correctanswer {
+  text-decoration: none;
+  color: white;
 }
