--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 body {
   display: flex;
   flex-direction: column;
@@ -13,7 +7,7 @@ body {
 }
 
 .header {
-  background: #000000;
+  background: var(--black);
   color: #ffffff;
   height: 80px;
   box-shadow: rgba(210, 167, 167, 0.24) 0 3px 8px;
@@ -27,7 +21,7 @@ body {
 .header__heading {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #4eb64c;
+  color: var(--green);
   text-align: center;
 }
 
@@ -59,8 +53,8 @@ body {
   width: 230px;
   height: 60px;
   color: white;
-  background-color: rgb(0, 0, 0);
-  border: 2px solid #4eb64c;
+  background-color: var(--black);
+  border: 2px solid var(--green);
   border-radius: 8px;
   margin: 1.5em auto;
 }
@@ -72,7 +66,7 @@ body {
   height: auto;
   font-size: 20px;
   color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
+  background-color: var(--black);
   border: 2px solid grey;
   border-radius: 6px;
   margin: auto;
@@ -85,8 +79,8 @@ body {
   width: 100%;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(0, 0, 0);
-  color: #4eb64c;
+  background-color: var(--black);
+  color: var(--black);
 }
 
 .navbar-links ul {
@@ -101,14 +95,15 @@ body {
 
 .navbar-links li a {
   text-decoration: none;
-  color: #4eb64c;
+  color: var(--green);
   padding: 1.1rem;
   width: 100%;
   display: block;
+  background-color: var(--black);
 }
 
 .navbar-links li :hover {
-  background-color: crimson;
+  background-color: var(--red);
 }
 
 .correctanswer {
