--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,14 @@ body {
   right: -1px;
 }
 
+.bookmark {
+  background-color: rgb(81, 30, 30);
+}
+
+.bookmark.active {
+  background-color: rgb(255, 255, 255);
+}
+
 .showanswer {
   display: block;
   position: relative;
